--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   "packageManager": "npm@11.6.0",
   "dependencies": {
     "@angular/animations": "^19.2.16",
-    "@angular/cdk": "^19.2.19",
+    "@angular/cdk": "^21.0.1",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@angular/material": "^21.0.1",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@swimlane/ngx-charts": "^23.1.0",
